apps/deployCICD/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-redis-app
  namespace: deploycicd
spec:
  selector:
    app: php-redis-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
